--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'com.h2database', name: 'h2'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testCompile(group: 'com.nhaarman', name: 'mockito-kotlin', version: '1.4.0') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    testCompile group: "org.mockito", name: "mockito-core", version: "2.7.21"
 }
