--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,12 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     compile group: 'com.h2database', name: 'h2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testCompile group: 'org.springframework.security', name: 'spring-security-test'
     testCompile(group: 'com.nhaarman', name: 'mockito-kotlin', version: '1.4.0') {
         exclude group: 'org.jetbrains.kotlin'
     }
